--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 #mongo
 spring.data.mongodb.uri=mongodb+srv://admin:N6HNA395xzamcKpv@drugrecordsdb.xfidxyt.mongodb.net/db?retryWrites=true&w=majority
+
 #fda
 fda.drug.api.url=https://api.fda.gov/drug/drugsfda.json
-#logging.level.org.springframework.web: DEBUG
+
+#application
+spring.jackson.default-property-inclusion=non_null
